# OpenNI

./: CMakeLists.txt  qiproject.xml
Include/: CMakeLists.txt
Platform/Linux/CreateRedist/: Redist_OpenNi.py  install.sh
Source/: CMakeLists.txt
Source/Modules/: CMakeLists.txt
Source/Modules/nimCodecs/: CMakeLists.txt
Source/Modules/nimMockNodes/: CMakeLists.txt
Source/Modules/nimRecorder/: CMakeLists.txt
Source/OpenNI/: CMakeLists.txt  XnOpenNI.cpp
Source/Utils/: CMakeLists.txt
Source/Utils/niLicense/: CMakeLists.txt
Source/Utils/niReg/: CMakeLists.txt
